# anibridge-list-base

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish.yml
src/anibridge/list/: __init__.py  base.py  interfaces.py  registry.py
tests/: test_base.py
